trybuild_tests/1_70/runtime/cannot_return_exposed_secret.stderr
error: lifetime may not live long enough
  --> trybuild_tests/1_70/runtime/cannot_return_exposed_secret.rs:23:55
   |
23 |     let _ = secret_one.expose_secret(|exposed_secret| exposed_secret);
   |                                       --------------- ^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
   |                                       |             |
   |                                       |             return type of closure is RTExposedSecret<'2, &A>
   |                                       has type `RTExposedSecret<'1, &'1 A>`
   |
   = note: requirement occurs because of the type `RTExposedSecret<'_, &A>`, which makes the generic argument `'_` invariant
   = note: the struct `RTExposedSecret<'brand, T>` is invariant over the parameter `'brand`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0507]: cannot move out of dereference of `RTExposedSecret<'_, &A>`
  --> trybuild_tests/1_70/runtime/cannot_return_exposed_secret.rs:25:55
   |
25 |     let _ = secret_one.expose_secret(|exposed_secret| *exposed_secret);
   |                                                       ^^^^^^^^^^^^^^^ move occurs because value has type `A`, which does not implement the `Copy` trait
